# fiddles

./: pyproject.toml
hw1/: hw1.ipynb
hw2/: Homework2.py  Joaquin_Dominguez_HW2.py  hw2_.ipynb
hw3/: Dockerfile  hw3.ipynb  hw3.py
hw4/: Dockerfile  README.txt  base.py  data_aug.py  hw4.py  hw4.txt  hw4_2.py  join.py  pre-data.py  pyproject.toml
hw4/hw4_sub/: README.txt  base.py  data_aug.py  join.py
hw4/hw4_sub/mnist_model.tf/: keras_metadata.pb  saved_model.pb
hw4/hw4_sub/mnist_model.tf/variables/: variables.index
hw4/mnist_model.tf/: fingerprint.pb
