[tool.poetry]
name = "workspace"
version = "0.1.0"
description = ""
authors = ["Joaquin Dominguez <83036592+j-dominguez9@users.noreply.github.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
numpy = "^1.24.2"
ipykernel = "^6.21.1"
scikit-learn = "^1.2.1"
matplotlib = "^3.6.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
